src/test/results/deca/codegen/invalid/Objet/UninitializedClass.res
  ** IMA ** ERREUR ** Ligne 24 : 
    Adressage indirect : la base ne contient pas une adresse
